Fix slightly misalignment with some avatar select disabled hovers
Fixes #205

--- a/stylesheets/avatar-select.scss
+++ b/stylesheets/avatar-select.scss
@@ -135,7 +135,7 @@ body.admin-bar #collapse-sidebar {
     background-position:-5px 0;
   }
   &.disabled .hover {
-    background-position:-5px -61px;
+    background-position:-5px -62px;
   }
   &:not(.disabled) .hover {
     background-position:-5px -174px;
@@ -147,7 +147,7 @@ body.admin-bar #collapse-sidebar {
     background-position:-5px -677px;
   }
   &.disabled .hover {
-    background-position:-5px -734px;
+    background-position:-5px -733px;
   }
   &:not(.disabled) .hover {
     background-position:-5px -845px;
@@ -159,7 +159,7 @@ body.admin-bar #collapse-sidebar {
     background-position:-5px -454px;
   }
   &.disabled .hover {
-    background-position:-5px -511px;
+    background-position:-5px -510px;
   }
   &:not(.disabled) .hover {
     background-position:-6px -622px;
